--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,10 +10,10 @@
       </tr>
     </thead>
     <tbody>
-      <% @mtasks.each do |task| %>
+      <% @tasks.each do |task| %>
         <tr>
           <td><%= link_to task.id, task %></td>
-          <td><%= task.title %></td>
+          <td><%= task.status %></td>
           <td><%= task.content %></td>
         </tr>
       <% end %>
