--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,25 @@
+<header>
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Tasklists</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to 'Signup', signup_path %></li>
+            <li><%= link_to 'Login', login_path %></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           
@@ -15,7 +37,8 @@
 <%= link_to 'My profile', user_path(current_user) %>
 </li>
                 <li role="separator" class="divider"></li>
-                <li>Logout</li>
+                <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+
               </ul>
             </li>
           
@@ -23,7 +46,6 @@
 
             <li><%= link_to 'Signup', signup_path %></li>
             <li><%= link_to 'Login', login_path %></li>
-            <li><%= link_to 'Logout', logout_path, method: :delete %></li>
 
 <% end %>
 
