--- a/app/views/layouts/_error_tasks.html.erb
+++ b/app/views/layouts/_error_tasks.html.erb
@@ -3,7 +3,7 @@
   <div class="alert alert-warning">
     <ul>
       
-<% model.errors.full_tasks.each do |task| %>
+<% model.errors.full_messages.each do |task| %>
 
         <li>
 <%= task %>
