--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,7 @@
   <aside class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">
-<%= @user.name %>
-</h3>
+        <h3 class="panel-title"><%= @user.name %></h3>
       </div>
       <div class="panel-body">
         <img class="media-object img-rounded img-responsive" src="
@@ -15,9 +13,8 @@
   </aside>
   <div class="col-xs-8">
     <ul class="nav nav-tabs nav-justified">
-      <li><a href="#">Microposts</a></li>
-      <li><a href="#">Followings</a></li>
-      <li><a href="#">Followers</a></li>
+      <li class="<%= 'active' if current_page?(user_path(@user)) %>"><%= link_to user_path(@user) do %>TaskList <span class="badge"><%= @count_tasks %></span><% end %></li>
     </ul>
+    <%= render 'tasks/tasks', tasks: @tasks %>
   </div>
 </div>
