--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -1,26 +1,43 @@
-<ul class="media-list">
-  <% tasks.each do |task| %>
-    <li class="media">
-      <div class="media-left">
-        <img class="media-object img-rounded" src="<%= gravatar_url(task.user, options = { size: 50 }) %>" alt="">
-      </div>
-      <div class="media-body">
-        <div>
-          <%= link_to task.user.name, user_path(task.user) %> <span class="text-muted">posted at <%= task.created_at %></span>
-        </div>
-        <div>
-          <p>タスク:<%= task.content %></p>
-        </div>
-        <div>
-          <p>ステータス:<%= task.status %></p>
-        </div>
-        <div>
-          <% if current_user == task.user %>
-            <%= link_to "Delete", task, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-xs' %>
-          <% end %>
-        </div>
-      </div>
-    </li>
-  <% end %>
-  <%= paginate tasks %>
-</ul>
+<h1>タスク一覧</h1>
+
+<% if @tasks.any? %>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>タスク</th>
+        <th>ステータス</th>
+        <th>編集</th>
+        <th>削除</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @tasks.each do |task| %>
+        <tr>
+          <td><%= task.id %></td>
+          <td><%= task.content %></td>
+          <td><%= task.status %></td>
+          <td>
+            <% if current_user == task.user %>
+              <%= link_to "Edit", edit_task_path(task), class: "btn btn-primary btn-xs" %>
+            <% end %>
+          </td>
+          <td>
+            <% if current_user == task.user %>
+              <%= link_to "Delete", task, 
+                method: :delete, 
+                data: {confirm: "削除しますか?"}, 
+                class: "btn btn-danger btn-xs" 
+              %>
+            <% end %>            
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <div>
+    <%= paginate @tasks %>
+  </div>
+
+<% end %>
