--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -2,24 +2,38 @@
   <div class="row">
     <aside class="col-md-4">
       <%= form_for(@task) do |f| %>
+      
+        <% if @task.errors.any? %>
+          <div id="error_explanation" class="alert alert-warning">
+            <ul>
+              <% @task.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+        
         <div class="form-group">
-         タスク <%= f.text_area :content, class: 'form-control', rows: 5 %>
+          <%= f.label :content, "タスク" %>
+          <%= f.text_field :content, class: "form-control" %>    
         </div>
         <div class="form-group">
-         ステータス <%= f.text_area :status, class: 'form-control', rows: 5 %>
+        <%= f.label :status, "ステータス" %>
+        <%= f.text_field :status, class: "form-control" %> 
         </div>
-        <%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
+        <%= f.submit "Post", class: "btn btn-primary btn-block" %>
+        
       <% end %>
     </aside>
     <div class="col-xs-8">
-      <%= render 'tasks/tasks', tasks: @tasks %>
+      <%= render "tasks/tasks", tasks: @tasks, user: @user %>
     </div>
   </div>
 <% else %>
   <div class="center jumbotron">
     <div class="text-center">
       <h1>Welcome to the TaskList</h1>
-      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+      <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
     </div>
   </div>
 <% end %>
